Anchors need to count only selected paragraphs. Library drawer now has an iframe behind it: in IE this hides select boxes instead of letting them bleed through. drawer.xsl no longer puts the search box in an form as this could crash IE: should really either move drawers into an iframe or remove other forms as well. Another fix to making URLs relative. Protect against bad URL in 'current selection'

--- a/common/kupudrawerstyles.css
+++ b/common/kupudrawerstyles.css
@@ -21,8 +21,13 @@
   padding: 0 8px 8px 8px;
   height: auto;
   width: 640px;
-  z-index: 2;
+  z-index: 3;
   color: black;
+}
+
+.kupu-maskframe {
+  position:absolute;
+  z-index: 3;
 }
 
 .kupu-tabledrawer {
